--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The simple conversion bot with ability to read conversation files",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,5 +14,8 @@
     "bot"
   ],
   "author": "Dawid Płocki",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.19.2"
+  }
 }
