--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "conversation",
@@ -16,6 +16,7 @@
   "author": "Dawid Płocki",
   "license": "ISC",
   "devDependencies": {
+    "mocha": "^6.2.0",
     "nodemon": "^1.19.2"
   }
 }
