--- a/.github/workflows/test_and_publish.yml
+++ b/.github/workflows/test_and_publish.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "Setup"
-        run: npm install
+        run: npm install --ignore-scripts
 
       - name: "Tests"
         run: npm test
@@ -27,27 +27,35 @@ jobs:
       - name: "Getting the sources"
         uses: actions/checkout@v2
 
-      - name: "Setup"
-        run: npm install
-
-      - name: "Set up the NPM"
+      - name: "Set up the NPM environment"
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dplocki'
 
-      - name: "Publish"
-        run: |
-          CURRENT_VERSION=`node -p 'require("./package.json").version'`
-          LATEST_PACKAGE=`npm info @dplocki/generic-conversation-bot version`
-
-          echo $CURRENT_VERSION $LATEST_PACKAGE
-
-          if [ "$CURRENT_VERSION" = "$LATEST_PACKAGE" ]; then
-            echo "Nothing to publish"
-          else
-            npm publish
-          fi
+      - name: "Get version of last NPM package"
+        id: GetLastPackageVersion
+        run: echo "::set-output name=version::"`npm info @dplocki/generic-conversation-bot version`
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: "Get version from package.json"
+        id: GetCurrentVersion
+        run: echo "::set-output name=version::"`node -p 'require("./package.json").version'`
+
+      - name: Publish package
+        if: ${{ steps.GetCurrentVersion.outputs.version != steps.GetLastPackageVersion.outputs.version }}
+        run: |
+          npm install --ignore-scripts
+          npm publish --ignore-scripts
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create Tag
+        if: ${{ steps.GetCurrentVersion.outputs.version != steps.GetLastPackageVersion.outputs.version }}
+        uses: negz/create-tag@v1
+        with:
+          version: v${{ steps.GetCurrentVersion.outputs.version }}
+          message: Release for version v${{ steps.GetCurrentVersion.outputs.version }}
+          token: ${{ secrets.GITHUB_TOKEN }}
